<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp">

	<TextView
		android:id="@+id/plsRecordView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/black"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/plsRecViewText"
		android:textColor="#FAFAFA"
		android:textSize="16sp"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/authorityView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/defaultGreyColor"
		android:padding="8dp"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="italic"
		tools:text="content://"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@android:color/holo_orange_light"
		android:paddingLeft="4dp"
		android:paddingRight="4dp"
		android:text="@string/projection"
		android:textColor="@android:color/white"
		android:textSize="16sp"
		android:textStyle="bold"/>

	<EditText
		android:id="@+id/projectionEdit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:padding="8dp"
		android:textColor="@android:color/white"
		android:theme="@style/BaseEditTextStyle"
		tools:text="*from sqlite_master--"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@android:color/holo_orange_light"
		android:paddingLeft="4dp"
		android:paddingRight="4dp"
		android:text="@string/selection"
		android:textColor="@android:color/white"
		android:textSize="16sp"
		android:textStyle="bold"/>

	<EditText
		android:id="@+id/selectionEdit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:padding="8dp"
		android:textColor="@android:color/white"
		android:theme="@style/BaseEditTextStyle"
		tools:text="column_name like '%?%'"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@android:color/holo_orange_light"
		android:paddingLeft="4dp"
		android:paddingRight="4dp"
		android:text="@string/selection_args"
		android:textColor="@android:color/white"
		android:textSize="16sp"
		android:textStyle="bold"/>

	<EditText
		android:id="@+id/selectionArgsEdit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:padding="8dp"
		android:textColor="@android:color/white"
		android:theme="@style/BaseEditTextStyle"
		tools:text="some_column_name"/>

	<Button
		android:id="@+id/queryButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@android:color/holo_orange_light"
		android:text="@string/query"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="bold"/>

</LinearLayout>
